Added description and title to the SipsWithStructure association option.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -113,8 +113,8 @@ association.sipSelection.description = Use this option to create a SIP for each 
 association.sipPerFile.title = One description item for each file under the selected folder(s)
 association.sipPerFile.description = Use this option to create one SIP for each file under the selected folder(s). This operation will create a set of SIPs equal to the number of files under the selected folder(s).
 
-association.sipWithStructure.title = One description item for each folder under the selected folder(s)
-association.sipWithStructure.description = Use this option to create a SIP for each folder under the selected folder(s). This operation will create a set of SIPs equal to the amount of folders under the selected folder(s) until the selected level.
+association.sipWithStructure.title = Create description objects and submission packages
+association.sipWithStructure.description = This option creates description objects in addition to submission packages. It should be used when the folder structure is well organized and resembles the desired output plan. If a folder only has sub-folders, it creates a Series. When a folder's children are just files, the whole folder will be used to create one submission package. In a situation where a folder has a mixed contet, files and sub-folders, each file will be a submission package and each sub-folder will be a Series.
 
 metadata.singleFile.title = Load from a single file
 metadata.singleFile.description = Use this option to add to each SIP one metadata file of your choice. The selected file will be added to each of the created SIPs.
