ResourceResolver now tries to get the import from the internet if the attribute is a URL. Updated some language strings.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -87,9 +87,9 @@ SchemaPane.help.title=Load your\nclassification scheme
 SchemaPane.newNode=New node
 SchemaPane.remove=Remove
 SchemaPane.title=Classification Scheme
-SchemaPane.create=create a classification scheme
+SchemaPane.create=new classification scheme
 SchemaPane.load=Load a classification scheme
-SchemaPane.or=or
+SchemaPane.or=or create a
 
 SimpleSipCreator.copyingData=Copying the SIP's data
 SimpleSipCreator.copyingMetadata=Copying the SIP's metadata
@@ -109,7 +109,7 @@ association.sipSelection.description = Use this option to create a SIP for each 
 association.sipPerFile.title = One description item for each file under the selected folder(s)
 association.sipPerFile.description = Use this option to create one SIP for each file under the selected folder(s). This operation will create a set of SIPs equal to the number of files under the selected folder(s).
 
-association.sipWithStructure.title = Create description objects and submission packages
+association.sipWithStructure.title = One classification scheme from folder structure
 association.sipWithStructure.description = This option creates description objects in addition to submission packages. It should be used when the folder structure is well organized and resembles the desired output plan. If a folder only has sub-folders, it creates a Series. When a folder's children are just files, the whole folder will be used to create one submission package. In a situation where a folder has a mixed contet, files and sub-folders, each file will be a submission package and each sub-folder will be a Series.
 
 metadata.singleFile.title = Load from a single file
@@ -126,7 +126,7 @@ metadata.template.description = Use this option to create metadata from a predef
 export=Export
 SchemaPane.dragHelp=Drop files/directories here
 SchemaPane.confirmRemove.header=Are you sure you want to remove this level?
-SchemaPane.confirmRemove.content=This will remove %d SIPs.
+SchemaPane.confirmRemove.content=This action will remove all the selected description levels.
 SchemaPane.confirmNewScheme.header=Are you sure you want to remove the current classification scheme?
 SchemaPane.confirmNewScheme.content=All progress will be lost.
 SchemaPane.confirmNewScheme.title=Confirm new classification scheme
