--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -59,7 +59,7 @@ Main.hideFiles=Hide Files
 Main.hideIgnored=Hide ignored
 Main.hideMapped=Hide mapped
 Main.ignoreItems=Ignore item(s)
-Main.loadCS=Load
+Main.loadCS=Import
 Main.addFolder=Add folder
 Main.quit=Quit
 Main.showFiles=Show files
