Some general fixes

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -38,7 +38,7 @@ CreationModalProcessing.remaining=Remaining time
 CreationModalProcessing.subtitle=Created %d of %d (%d%%)
 
 FileExplorerPane.chooseDir=Choose directory
-FileExplorerPane.help.title=Choose your\nworking directory
+FileExplorerPane.help.title=Choose the folders\nthat contain your files
 FileExplorerPane.title=Source File Explorer
 
 InspectionPane.help.ruleList=Associate files/directories \nto a description object \nto create a rule
