--- a/src/main/resources/properties/styles.properties
+++ b/src/main/resources/properties/styles.properties
@@ -1,6 +1,6 @@
 source.cell.mapped = -fx-text-fill: darkgray
 export.alert = -fx-max-height: 400px; -fx-pref-width: 600px; -fx-pref-height: 300px;
-creationmodalprocessing.blackmagic = -fx-background-color: red;
+creationmodalprocessing.blackmagic = -fx-background-color: white;
 backgroundWhite = -fx-background-color: white
 
 association.singleSip.icon = icons/singleSip.png
