Added tooltips to the wordless buttons. If a translation is missing, tries to use English.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -167,6 +167,9 @@ SimpleSipCreator.initZIP=Initializing zip file
 FileExplorerPane.alertAddFolder.content=Unable to add the folder "%s"\nsince "%s" has already been added.
 FileExplorerPane.alertAddFolder.title=Add folder
 FileExplorerPane.alertAddFolder.header=Unable to add folder
+InspectionPane.validate=Validate
+InspectionPane.textContent=Text content
+InspectionPane.form=Form
 
 
 
