Minor refactor of the InspectionPane code. Improved the way the metadata buttons are displayed.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -170,6 +170,7 @@ FileExplorerPane.alertAddFolder.header=Unable to add folder
 InspectionPane.validate=Validate
 InspectionPane.textContent=Text content
 InspectionPane.form=Form
+InspectionPane.addMetadata=Add metadata
 
 
 
