Improved the AddMetadataPane

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -175,6 +175,9 @@ InspectionPane.removeMetadata=Remove metadata file
 InspectionPane.removeMetadata.header=Are you sure you want to remove the metadata file?
 InspectionPane.removeMetadata.title=Remove metadata file
 InspectionPane.removeMetadata.content=All progress will be lost.
+metadata.emptyFile.title=Create a new file
+metadata.emptyFile.description=Use this option if you wish to create a new file and edit it later.
+name=Name
 
 
 
