--- a/src/main/resources/properties/styles.properties
+++ b/src/main/resources/properties/styles.properties
@@ -11,3 +11,4 @@ metadata.singleFile.icon = icons/singleFile.png
 metadata.sameFolder.icon = icons/sameFolder.png
 metadata.diffFolder.icon = icons/diffFolder.png
 metadata.template.icon = icons/template.png
+metadata.emptyFile.icon = icons/newFile.png
