Don't allow more than one metadata file with the same name in each description object.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -178,6 +178,9 @@ InspectionPane.removeMetadata.content=All progress will be lost.
 metadata.emptyFile.title=Create a new file
 metadata.emptyFile.description=Use this option if you wish to create a new file and edit it later.
 name=Name
+InspectionPane.addMetadataError.title=Add metadata file
+InspectionPane.addMetadataError.header=Error adding metadata file
+InspectionPane.addMetadataError.content=There's already a file name "%s" in the description object's metadata list.
 
 
 
