Added elapsed time to SIP creation. Improved the way the metadata is associated to the SIPs in SipPerFile. The SipPreviewNodes are only created and added after the creation is finished.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -181,6 +181,7 @@ name=Name
 InspectionPane.addMetadataError.title=Add metadata file
 InspectionPane.addMetadataError.header=Error adding metadata file
 InspectionPane.addMetadataError.content=There's already a file name "%s" in the description object's metadata list.
+CreationModalProcessing.elapsed=Elapsed
 
 
 
