Fixed bug where the metadata form wasn't being correctly shown. Added pane to help the user when there's no metadata in a SIP.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -182,6 +182,7 @@ InspectionPane.addMetadataError.title=Add metadata file
 InspectionPane.addMetadataError.header=Error adding metadata file
 InspectionPane.addMetadataError.content=There's already a file name "%s" in the description object's metadata list.
 CreationModalProcessing.elapsed=Elapsed
+add=Add
 
 
 
