Added translations to some known form tags

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -183,6 +183,17 @@ InspectionPane.addMetadataError.header=Error adding metadata file
 InspectionPane.addMetadataError.content=There's already a file name "%s" in the description object's metadata list.
 CreationModalProcessing.elapsed=Elapsed
 add=Add
+metadata.id=ID
+metadata.title=Title
+metadata.producer=Producer
+metadata.now=Now
+metadata.dateInitial=Initial date
+metadata.dateFinal=Final date
+metadata.creator=Creator
+metadata.language=Language
+metadata.description=Description
+metadata.rights=Rights
+metadata.level=Description level
 
 
 
