Started to add a theme to improve the interface

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -18,7 +18,6 @@ load=Load
 remove=Remove
 start=Start
 root=Root
-
 CreationModalPreparation.choose=Choose...
 CreationModalPreparation.creatingSips=Creating SIPs
 CreationModalPreparation.outputDirectory=Output directory
@@ -36,21 +35,17 @@ CreationModalProcessing.finished=Finished
 CreationModalProcessing.impossibleEstimate=Impossible to estimate time
 CreationModalProcessing.remaining=Remaining time
 CreationModalProcessing.subtitle=Created %d of %d (%d%%)
-
-FileExplorerPane.chooseDir=Choose directory
+FileExplorerPane.chooseDir=Choose folder
 FileExplorerPane.help.title=Choose the folders\nthat contain your files
 FileExplorerPane.title=Source File Explorer
-
 InspectionPane.help.ruleList=Associate files/directories \nto a description object \nto create a rule
 InspectionPane.help.title=Select an item from \nthe classification scheme\nto inspect it
 InspectionPane.metadata=Metadata
 InspectionPane.metadata.placeholder=Write the description node's metadata here
 InspectionPane.onDrop=Create association
 InspectionPane.rules=Rules
-
 LoadingPane.createAssociation=Create association to
-
-Main.createCS = New
+Main.createCS=New
 Main.edit=Edit
 Main.exportCS=Export
 Main.exportSips=Export SIPs
@@ -67,9 +62,7 @@ Main.showIgnored=Show Ignored
 Main.showMapped=Show Mapped
 Main.useJava8=Java version is %s. Please use at least \\"Java 1.8\\".
 Main.view=View
-
 RuleCell.createdItem=Created %d item
-
 RuleModalPane.associationMethod=Choose the association method
 RuleModalPane.chooseDirectory=Choose Directory...
 RuleModalPane.chooseFile=Choose File...
@@ -80,7 +73,6 @@ RuleModalProcessing.creatingPreview=Creating SIP previews
 RuleModalProcessing.processedDirsFiles=Processed %d directories and %d files
 RuleModalRemoving.removedFormat=Removed %d%% of SIPs
 RuleModalRemoving.title=Removing SIPs
-
 SchemaNode.items.format=%s  (%d items)
 SchemaPane.add=Add
 SchemaPane.help.title=Load your\nclassification scheme
@@ -90,39 +82,29 @@ SchemaPane.title=Classification Scheme
 SchemaPane.create=new classification scheme
 SchemaPane.load=Load a classification scheme
 SchemaPane.or=or create a
-
 SimpleSipCreator.copyingData=Copying the SIP's data
 SimpleSipCreator.copyingMetadata=Copying the SIP's metadata
 SimpleSipCreator.creatingStructure=Creating the SIP's directory structure
 SimpleSipCreator.finalizingSip=Finalizing the SIP
-
 SourceTreeCell.remove=Remove Ignore
 SourceTreeLoading.title=Loading...
 SourceTreeLoadMore.title=Load More...
-
-association.singleSip.title = One description item with all selected files and/or folders
-association.singleSip.description = Use this option to create one and only one SIP containing all selected files and folders. If you selected five folders and/or files the association will result in one SIP corresponding to one item with a set description level.
-
-association.sipSelection.title = One description item for each selected files or folders
-association.sipSelection.description = Use this option to create a SIP for each of the selected files or folders. If you selected five files and/or folders, the association will create five SIPs, i.e. five descriptive items. Each one of these items can correspond to a distinct description level.
-
-association.sipPerFile.title = One description item for each file under the selected folder(s)
-association.sipPerFile.description = Use this option to create one SIP for each file under the selected folder(s). This operation will create a set of SIPs equal to the number of files under the selected folder(s).
-
-association.sipWithStructure.title = One classification scheme from folder structure
-association.sipWithStructure.description = This option creates description objects in addition to submission packages. It should be used when the folder structure is well organized and resembles the desired output plan. If a folder only has sub-folders, it creates a Series. When a folder's children are just files, the whole folder will be used to create one submission package. In a situation where a folder has a mixed contet, files and sub-folders, each file will be a submission package and each sub-folder will be a Series.
-
-metadata.singleFile.title = Load from a single file
-metadata.singleFile.description = Use this option to add to each SIP one metadata file of your choice. The selected file will be added to each of the created SIPs.
-
-metadata.sameFolder.title = Load from each directory
-metadata.sameFolder.description = Use this option to include in the SIP a metadata file located in the root of the directory used to create the packet. The metadata file must have a defined pattern (e.g. metadata.*).
-
-metadata.diffFolder.title = Load from one directory
-metadata.diffFolder.description = Use this option to select one directory where all the metadata files to include in the SIPs can be found. The association between metadata files and SIPs is done through the file name (ignoring the extension). In the cases where no association can be made, the SIP will not contain metadata.
-
-metadata.template.title = Create new metadata from a template
-metadata.template.description = Use this option to create metadata from a predefined model. The associated metadata for each SIP will be the same. After the SIP creation, the user should edit the metadata according to the data associated to each packet.
+association.singleSip.title=One description item with all selected files and/or folders
+association.singleSip.description=Use this option to create one and only one SIP containing all selected files and folders. If you selected five folders and/or files the association will result in one SIP corresponding to one item with a set description level.
+association.sipSelection.title=One description item for each selected files or folders
+association.sipSelection.description=Use this option to create a SIP for each of the selected files or folders. If you selected five files and/or folders, the association will create five SIPs, i.e. five descriptive items. Each one of these items can correspond to a distinct description level.
+association.sipPerFile.title=One description item for each file under the selected folder(s)
+association.sipPerFile.description=Use this option to create one SIP for each file under the selected folder(s). This operation will create a set of SIPs equal to the number of files under the selected folder(s).
+association.sipWithStructure.title=One classification scheme from folder structure
+association.sipWithStructure.description=This option creates description objects in addition to submission packages. It should be used when the folder structure is well organized and resembles the desired output plan. If a folder only has sub-folders, it creates a Series. When a folder's children are just files, the whole folder will be used to create one submission package. In a situation where a folder has a mixed contet, files and sub-folders, each file will be a submission package and each sub-folder will be a Series.
+metadata.singleFile.title=Load from a single file
+metadata.singleFile.description=Use this option to add to each SIP one metadata file of your choice. The selected file will be added to each of the created SIPs.
+metadata.sameFolder.title=Load from each directory
+metadata.sameFolder.description=Use this option to include in the SIP a metadata file located in the root of the directory used to create the packet. The metadata file must have a defined pattern (e.g. metadata.*).
+metadata.diffFolder.title=Load from one directory
+metadata.diffFolder.description=Use this option to select one directory where all the metadata files to include in the SIPs can be found. The association between metadata files and SIPs is done through the file name (ignoring the extension). In the cases where no association can be made, the SIP will not contain metadata.
+metadata.template.title=Create new metadata from a template
+metadata.template.description=Use this option to create metadata from a predefined model. The associated metadata for each SIP will be the same. After the SIP creation, the user should edit the metadata according to the data associated to each packet.
 export=Export
 SchemaPane.dragHelp=Drop files/directories here
 SchemaPane.confirmRemove.header=Are you sure you want to remove this level?
@@ -194,6 +176,7 @@ metadata.language=Language
 metadata.description=Description
 metadata.rights=Rights
 metadata.level=Description level
+InspectionPane.title=Inspection
 
 
 
