Added an alert when trying to change the metadata content of a template

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -177,6 +177,9 @@ metadata.description=Description
 metadata.rights=Rights
 metadata.level=Description level
 InspectionPane.title=Inspection
+InspectionPane.changeTemplate.title=Override template
+InspectionPane.changeTemplate.header=Do you want to override the template?
+InspectionPane.changeTemplate.content=You will no longer be able to use the form to edit this metadata file.
 
 
 
