Fixed initialization bug and added more info when the initialization fails.

--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,9 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
-                    <descriptors>
-                        <descriptor>src/main/assembly/assembly-exclude-descriptor.xml</descriptor>
-                    </descriptors>
+                    <!--<descriptors>-->
+                    <!--<descriptor>src/main/assembly/assembly-exclude-descriptor.xml</descriptor>-->
+                    <!--</descriptors>-->
                     <appendAssemblyId>false</appendAssemblyId>
                 </configuration>
                 <executions>
