--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -182,6 +182,7 @@ InspectionPane.changeTemplate.header=Do you want to override the template?
 InspectionPane.changeTemplate.content=You will no longer be able to use the form to edit this metadata file.
 items=items
 folders=folder(s)
+Footer.memory=Memory usage: %s of %s
 
 
 
