--- a/pom.xml
+++ b/pom.xml
@@ -176,7 +176,7 @@
         <dependency>
             <groupId>org.roda-project</groupId>
             <artifactId>commons-ip</artifactId>
-            <version>1.0.0-alpha11</version>
+            <version>1.0.0-alpha12-pre</version>
         </dependency>
         <dependency>
             <groupId>com.samskivert</groupId>
