--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -1,20 +1,41 @@
-metadata.templates = ead,ead3,dc
-metadata.template.ead.file = ead2002.xml
-metadata.template.ead.title = EAD
-metadata.template.ead.version = 2002
-metadata.template.ead.schema=ead2002.xsd
-metadata.template.ead3.file = ead3.xml
-metadata.template.ead3.title = EAD
-metadata.template.ead3.version = 3
-metadata.template.ead3.schema=ead3.xsd
-metadata.template.dc.file = dc.xml
-metadata.template.dc.title = Dublin Core
-metadata.template.dc.version = SimpleDC20021212
-metadata.template.dc.schema=dc.xsd
-
+#########################################################
+# Configuration                                         #
+#########################################################
 # Force a locale, using the JVM default locale if not defined here
 # app.language = en
-
 # Regular expressions separated by ',' to ignore files.
 # These files won't appear in the explorer and won't be included in the SIPs
-app.ignoredFiles = Thumbs.db,\\.DS_Store,\\..*
+app.ignoredFiles=Thumbs.db,\\.DS_Store,\\..*
+#########################################################
+# Metadata templates                                    #
+#########################################################
+# EAD
+metadata.templates=ead,ead3,dc
+metadata.template.ead.file=ead2002.xml
+metadata.template.ead.title=EAD
+metadata.template.ead.version=2002
+metadata.template.ead.schema=ead2002.xsd
+metadata.template.ead.creatorOption=ead
+# EAD 3
+metadata.template.ead3.file=ead3.xml
+metadata.template.ead3.title=EAD
+metadata.template.ead3.version=3
+metadata.template.ead3.schema=ead3.xsd
+metadata.template.ead3.creatorOption=ead
+# Dublin Core
+metadata.template.dc.file=dc.xml
+metadata.template.dc.title=Dublin Core
+metadata.template.dc.version=SimpleDC20021212
+metadata.template.dc.schema=dc.xsd
+metadata.template.dc.creatorOption=dc
+#########################################################
+# Metadata types                                        #
+#########################################################
+metadata.types=ead,dc
+metadata.creatorOption.ead.title=EAD
+metadata.creatorOption.ead.value=EAD
+metadata.creatorOption.dc.title=Dublin Core
+metadata.creatorOption.dc.value=DC
+#########################################################
+# Other                                                 #
+#########################################################
