Added a label to the metadata types combobox and set the first item as selected.

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -15,27 +15,27 @@ metadata.template.ead.file=ead2002.xml
 metadata.template.ead.title=EAD
 metadata.template.ead.version=2002
 metadata.template.ead.schema=ead2002.xsd
-metadata.template.ead.creatorOption=ead
+metadata.template.ead.type=ead
 # EAD 3
 metadata.template.ead3.file=ead3.xml
 metadata.template.ead3.title=EAD
 metadata.template.ead3.version=3
 metadata.template.ead3.schema=ead3.xsd
-metadata.template.ead3.creatorOption=ead
+metadata.template.ead3.type=ead
 # Dublin Core
 metadata.template.dc.file=dc.xml
 metadata.template.dc.title=Dublin Core
 metadata.template.dc.version=SimpleDC20021212
 metadata.template.dc.schema=dc.xsd
-metadata.template.dc.creatorOption=dc
+metadata.template.dc.type=dc
 #########################################################
 # Metadata types                                        #
 #########################################################
 metadata.types=ead,dc
-metadata.creatorOption.ead.title=EAD
-metadata.creatorOption.ead.value=EAD
-metadata.creatorOption.dc.title=Dublin Core
-metadata.creatorOption.dc.value=DC
+metadata.type.ead.title=EAD
+metadata.type.ead.value=EAD
+metadata.type.dc.title=Dublin Core
+metadata.type.dc.value=DC
 #########################################################
 # Other                                                 #
 #########################################################
