Added the key-value metadata type

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -6,6 +6,7 @@
 # Regular expressions separated by ',' to ignore files.
 # These files won't appear in the explorer and won't be included in the SIPs
 app.ignoredFiles=Thumbs.db,\\.DS_Store,\\..*
+lastClassificationScheme=
 #########################################################
 # Metadata templates                                    #
 #########################################################
@@ -31,11 +32,10 @@ metadata.template.dc.type=dc
 #########################################################
 # Metadata types                                        #
 #########################################################
-metadata.types=ead,dc
+metadata.types=ead,dc,keyvalue
 metadata.type.ead.title=EAD
 metadata.type.ead.value=EAD
 metadata.type.dc.title=Dublin Core
 metadata.type.dc.value=DC
-#########################################################
-# Other                                                 #
-#########################################################
+metadata.type.keyvalue.title=Key-Value
+metadata.type.keyvalue.value=key-value
