Fixed errors created by a previous refactor (the Schemas were wrongfully changed). Added a mandatory option to the template tags.

--- a/src/main/resources/properties/styles.properties
+++ b/src/main/resources/properties/styles.properties
@@ -2,6 +2,7 @@ source.cell.mapped=-fx-text-fill: -fx-alt-dark
 export.alert=-fx-max-height: 400px; -fx-pref-width: 600px; -fx-pref-height: 300px;
 creationmodalprocessing.blackmagic=-fx-background-color: white;
 backgroundWhite=-fx-background-color: white
+boldFont=-fx-font-weight: bold
 association.singleSip.icon=icons/singleSip.png
 association.sipSelection.icon=icons/sipPerSelection.png
 association.sipPerFile.icon=icons/sipPerFile.png
