--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -11,7 +11,7 @@ lastClassificationScheme=
 # Metadata templates                                    #
 #########################################################
 # EAD
-metadata.templates=ead,ead3,dc
+metadata.templates=ead,ead3,dc,eadDGLAB
 metadata.template.ead.file=ead2002.xml
 metadata.template.ead.title=EAD
 metadata.template.ead.version=2002
@@ -29,6 +29,12 @@ metadata.template.dc.title=Dublin Core
 metadata.template.dc.version=SimpleDC20021212
 metadata.template.dc.schema=dc.xsd
 metadata.template.dc.type=dc
+# EAD 2002 DGLAB
+metadata.template.eadDGLAB.file=ead2002DGLAB.xml
+metadata.template.eadDGLAB.title=EAD DGLAB
+metadata.template.eadDGLAB.version=2002
+metadata.template.eadDGLAB.schema=ead2002.xsd
+metadata.template.eadDGLAB.type=ead
 #########################################################
 # Metadata types                                        #
 #########################################################
