Updated the templates

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -184,6 +184,8 @@ items=items
 folders=folder(s)
 Footer.memory=Memory usage: %s of %s
 type=Type
+metadata.repository=Repository
+metadata.embargoTime=Embargo Time
 
 
 
