Updated CommonsIP. Added tooltips to the IPContentTypes. Changed "rules" to "associations" in the interface

--- a/pom.xml
+++ b/pom.xml
@@ -176,7 +176,7 @@
         <dependency>
             <groupId>org.roda-project</groupId>
             <artifactId>commons-ip</artifactId>
-            <version>1.0.0-alpha12-pre</version>
+            <version>1.0.0-alpha12</version>
         </dependency>
         <dependency>
             <groupId>com.github.jknack</groupId>
