--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -38,12 +38,12 @@ CreationModalProcessing.subtitle=Created %d of %d (%d%%)
 FileExplorerPane.chooseDir=Choose folder
 FileExplorerPane.help.title=Choose the folders\nthat contain your files
 FileExplorerPane.title=Source File Explorer
-InspectionPane.help.ruleList=Associate files/directories \nto a description object \nto create a rule
+InspectionPane.help.ruleList=Associate files/directories \nto a description object \nto create a new association
 InspectionPane.help.title=Select an item from \nthe classification scheme\nto inspect it
 InspectionPane.metadata=Metadata
 InspectionPane.metadata.placeholder=Write the description node's metadata here
 InspectionPane.onDrop=Create association
-InspectionPane.rules=Rules
+InspectionPane.rules=Associations
 LoadingPane.createAssociation=Create association to
 Main.createCS=New
 Main.edit=Edit
@@ -186,6 +186,10 @@ Footer.memory=Memory usage: %s of %s
 type=Type
 metadata.repository=Repository
 metadata.embargoTime=Embargo Time
+IPContentType.ERMS=Electronic Resource Management System
+IPContentType.RDBMS=Relational Database Management System
+IPContentType.SMURF=Semantically Marked Up Record Format
+InspectionPane.IPType=IP type
 
 
 
