Updated the templates.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -191,6 +191,7 @@ IPContentType.SMURF=Semantically Marked Up Record Format
 InspectionPane.IPType=IP type
 IPContentType.MIXED=Mixed
 IPContentType.OTHER=Other
+metadata.descDate=Description creation date
 
 
 
