Removed the IP type label. Selects metadata option when any option is changed.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -192,6 +192,7 @@ InspectionPane.IPType=IP type
 IPContentType.MIXED=Mixed
 IPContentType.OTHER=Other
 metadata.descDate=Description creation date
+InspectionPane.sipTypeTooltip=IP type
 
 
 
