--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -205,6 +205,7 @@ Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolor
 apply=Apply
 InspectionPane.multipleSelected.confirm=Are you sure you want to apply these changes?
 InspectionPane.multipleSelected.helpTitle=Help
+InspectionPane.multipleSelected.appliedMessage=Changes applied!
 
 
 
