If all the selected items have the same template, the inspection shows an editor for that template.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -198,7 +198,7 @@ genericError.content=An unexpected error has occurred.\nThe application may be u
 CreationModalProcessing.openfolder=Open folder
 selected=Selected
 CreationModalPreparation.exportAll=Export all
-InspectionPane.multipleSelected.help=The metadata files added to the list above will be added to all the selected items from the classification plan. If there are any conflicts, i.e. an existing metadata file has the same name as a new one, the existing file will be replaced. The only exception is when the files are the same template. In this case, the values of the new template will override the old ones. The only case where the old value is kept is if the value of a field is {{auto-generate}}.
+InspectionPane.multipleSelected.help=The metadata files added to the list above will be added to all the selected items from the classification plan. If there are any conflicts, i.e. an existing metadata file has the same name as a new one, the existing file will be replaced. The only exception is when the files are the same template. In this case, the values of the new template will override the old ones. The only cases where the old value is kept is if the value of a field is {{auto-generate}} or {{mixed}}.
 apply=Apply
 InspectionPane.multipleSelected.confirm=Are you sure you want to apply these changes?
 InspectionPane.multipleSelected.helpTitle=Help
