Added "Open configuration folder" menu entry.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -203,6 +203,7 @@ apply=Apply
 InspectionPane.multipleSelected.confirm=Are you sure you want to apply these changes?
 InspectionPane.multipleSelected.helpTitle=Help
 InspectionPane.multipleSelected.appliedMessage=Changes applied!
+Main.openConfigurationFolder=Open configuration folder
 
 
 
