The application restarts after a language change is made.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -204,6 +204,7 @@ InspectionPane.multipleSelected.confirm=Are you sure you want to apply these cha
 InspectionPane.multipleSelected.helpTitle=Help
 InspectionPane.multipleSelected.appliedMessage=Changes applied!
 Main.openConfigurationFolder=Open configuration folder
+restart=Restart
 
 
 
