Moved the version to the type configuration

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -13,35 +13,36 @@ lastClassificationScheme=
 # EAD
 metadata.templates=ead,ead3,dc,eadDGLAB
 metadata.template.ead.file=ead2002.xml
-metadata.template.ead.title=EAD
-metadata.template.ead.version=2002
+metadata.template.ead.title=EAD 2002
 metadata.template.ead.schema=ead2002.xsd
-metadata.template.ead.type=ead
+metadata.template.ead.type=ead2002
 # EAD 3
 metadata.template.ead3.file=ead3.xml
-metadata.template.ead3.title=EAD
-metadata.template.ead3.version=3
+metadata.template.ead3.title=EAD 3
 metadata.template.ead3.schema=ead3.xsd
-metadata.template.ead3.type=ead
+metadata.template.ead3.type=ead3
 # Dublin Core
 metadata.template.dc.file=dc.xml
 metadata.template.dc.title=Dublin Core
-metadata.template.dc.version=SimpleDC20021212
 metadata.template.dc.schema=dc.xsd
 metadata.template.dc.type=dc
 # EAD 2002 DGLAB
 metadata.template.eadDGLAB.file=ead2002DGLAB.xml
 metadata.template.eadDGLAB.title=EAD DGLAB
-metadata.template.eadDGLAB.version=2002
 metadata.template.eadDGLAB.schema=ead2002.xsd
-metadata.template.eadDGLAB.type=ead
+metadata.template.eadDGLAB.type=ead2002
 #########################################################
 # Metadata types                                        #
 #########################################################
-metadata.types=ead,dc,keyvalue
-metadata.type.ead.title=EAD
-metadata.type.ead.value=EAD
+metadata.types=ead2002,ead3,dc,keyvalue
+metadata.type.ead2002.title=EAD 2002
+metadata.type.ead2002.value=EAD
+metadata.type.ead2002.version=2002
+metadata.type.ead3.title=EAD 3
+metadata.type.ead3.value=EAD
+metadata.type.ead3.version=3
 metadata.type.dc.title=Dublin Core
 metadata.type.dc.value=DC
+metadata.type.dc.version=SimpleDC20021212
 metadata.type.keyvalue.title=Key-Value
 metadata.type.keyvalue.value=key-value
