--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -209,6 +209,8 @@ CreationModalPreparation.prefix=SIP names
 name_types.ID=ID
 name_types.TITLE_ID=Title + ID
 name_types.TITLE_DATE=Title + Date
+and=and
+CreationModalPreparation.exportItems=Export items
 
 
 
