Alerts on startup when a new version is found. Fixes #174

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -211,6 +211,9 @@ name_types.TITLE_ID=Title + ID
 name_types.TITLE_DATE=Title + Date
 and=and
 CreationModalPreparation.exportItems=Export items
+Main.newVersion.content=Current version is %s\nLatest version is %s\n\nDo you want to download the latest version of RODA-in?
+Main.newVersion.header=New version is available
+
 
 
 
