--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -220,6 +220,7 @@ Main.noUpdates.header=RODA-in version %s
 Main.showHelp=Show help
 Main.hideHelp=Hide help
 templatingSystemHelp.header=Templating system help
+metadata.otherlevel=Other level
 
 
 
