Split the config in two files. Added a toggle help button to the menu.

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -1,12 +1,8 @@
 #########################################################
-# Configuration                                         #
+# User configuration                                    #
 #########################################################
-# Force a locale, using the JVM default locale if not defined here
-# app.language = en
-# Regular expressions separated by ',' to ignore files.
-# These files won't appear in the explorer and won't be included in the SIPs
-app.ignoredFiles=Thumbs.db,\\.DS_Store,\\..*
-lastClassificationScheme=
+creator= RODA-in
+producer= RODA-in
 #########################################################
 # Metadata templates                                    #
 #########################################################
