Added a help panel for the templating system using HTML.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -219,6 +219,7 @@ Main.noUpdates.content=You're using the latest version of RODA-in.
 Main.noUpdates.header=RODA-in version %s
 Main.showHelp=Show help
 Main.hideHelp=Hide help
+templatingSystemHelp.header=Templating system help
 
 
 
