Finished changing the way the tokens are displayed. Added help to the schema pane and inspection pane

--- a/src/main/resources/properties/help.properties
+++ b/src/main/resources/properties/help.properties
@@ -3,8 +3,10 @@ associationMethod=
 export=
 fileExplorer=
 firstStep=
+inspectionpane=
 inspectionPanel.associations=
 inspectionPanel.data=
 inspectionPanel.metadata=
 metadataMethod=
+schemapane=
 secondStep=
