Fixes #177 - Validation action messages are not translated (are always in english)

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -221,6 +221,8 @@ Main.showHelp=Show help
 Main.hideHelp=Hide help
 templatingSystemHelp.header=Templating system help
 metadata.otherlevel=Other level
+validMetadata=Valid metadata!
+invalidMetadata=Invalid metadata!
 
 
 
