Stops displaying error messages if there are too many errors in succession. The previous behaviour had the risk of hanging the application.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -223,6 +223,10 @@ templatingSystemHelp.header=Templating system help
 metadata.otherlevel=Other level
 validMetadata=Valid metadata!
 invalidMetadata=Invalid metadata!
+CreationModalProcessing.errorMessagesStopped.header=Error messages hidden
+CreationModalProcessing.errorMessagesStopped.content=Due to the large number of error messages, subsequent messages will not be displayed.\
+\
+Please check the application's log file to see all the error messages.
 
 
 
