Changed the help popups to Tooltips

--- a/src/main/resources/properties/help.properties
+++ b/src/main/resources/properties/help.properties
@@ -10,3 +10,15 @@ inspectionPanel.metadata=
 metadataMethod=
 schemapane=
 secondStep=
+tooltip.associate=
+tooltip.associationMethod=
+tooltip.export=
+tooltip.fileExplorer=
+tooltip.firstStep=
+tooltip.inspectionpane=
+tooltip.inspectionPanel.associations=
+tooltip.inspectionPanel.data=
+tooltip.inspectionPanel.metadata=
+tooltip.metadataMethod=
+tooltip.schemapane=
+tooltip.secondStep=
